2009-11-18  Larry Ewing  <lewing@novell.com>

	* frameworkelement.cpp: In measure make sure we track the last
	size we were measured at even if we are collapsed.
	In Arrange don't descend into the tree if we are not visible but
	track the last slot.

	r: rolf

2009-11-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* playlist.cpp: ParseASX2: don't verify the end of the uri, there is
	no guarantee the uri has a specific ending.

2009-11-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaplayer.cpp: Open: Call SetSelected and ref on the video stream
	we actually select, and not all of video streams we loop over.

2009-11-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaelement.h: Added LogReady event.

	* eventargs.cpp|h: Added a LogReadyRoutedEventArgs class.

	* enums.cpp|h: Added LogSource enum.

	* type.h:
	* value.h:
	* cbinding.h:
	* cbinding.cpp:
	* type-generated.cpp: Regenerated.

2009-11-18  Jeffrey Stedfast  <fejj@novell.com>

	Fix for drt #481

	* textbox.cpp (KeyPressPageUp, KeyPressPageDown): Silverlight
	seems to set these to handled even if no cursor change took place.

2009-11-18  Sebastien Pouliot  <sebastien@ximian.com>

	* security.c: Do not consider System.Xml.dll and Microsoft.
	VisualBasic.dll as platform code since, right now, they do not
	contain any [SecurityCritical] nor [SecuritySafeCritical] code

2009-11-18  Alan McGovern  <amcgovern@novell.com>

	* grid.h:
	* grid.cpp: We need to store the sizes of all the grid
	  segments immediately after we finish measuring them. These
	  sizes are used as our base values when deciding if we should
	  expand star rows/cols. The rules for expanding star
	  rows/cols now make sense :)

2009-11-18  Jeffrey Stedfast  <fejj@novell.com>

	* uri.cpp (Combine): Use different combining rules for 1.0 apps
	(if the relative_path starts with a '/', always replace the path
	rather than combining).

2009-11-18  Alan McGovern  <amcgovern@novell.com>
